y.output
Terminals unused in grammar

    NOTOKEN


State 8 conflicts: 1 reduce/reduce
State 20 conflicts: 1 shift/reduce


Grammar

    0 $accept: goal $end

    1 goal: commands

    2 commands: command
    3         | command_pipe
    4         | commands command

    5 command: simple_command iomodifier_list_opt background_opt NEWLINE
    6        | NEWLINE
    7        | error NEWLINE

    8 simple_command: command_and_args

    9 command_and_args: command_word arg_list

   10 command_pipe: command_and_args PIPE command_pipe
   11             | command_and_args

   12 arg_list: arg_list argument
   13         | %empty

   14 iomodifier_list_opt: iomodifier_list
   15                    | %empty

   16 iomodifier_list: iomodifier_opt iomodifier_list
   17                | iomodifier_opt

   18 argument: WORD

   19 command_word: WORD

   20 $@1: %empty

   21 $@2: %empty

   22 iomodifier_opt: GREAT WORD $@1 LESS WORD $@2 GREATGREAT WORD

   23 background_opt: AMPERSAND
   24               | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7
    WORD <string_val> (258) 18 19 22
    NOTOKEN (259)
    GREAT (260) 22
    NEWLINE (261) 5 6 7
    LESS (262) 22
    GREATGREAT (263) 22
    PIPE (264) 10
    AMPERSAND (265) 23


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    goal (12)
        on left: 1
        on right: 0
    commands (13)
        on left: 2 3 4
        on right: 1 4
    command (14)
        on left: 5 6 7
        on right: 2 4
    simple_command (15)
        on left: 8
        on right: 5
    command_and_args (16)
        on left: 9
        on right: 8 10 11
    command_pipe (17)
        on left: 10 11
        on right: 3 10
    arg_list (18)
        on left: 12 13
        on right: 9 12
    iomodifier_list_opt (19)
        on left: 14 15
        on right: 5
    iomodifier_list (20)
        on left: 16 17
        on right: 14 16
    argument (21)
        on left: 18
        on right: 12
    command_word (22)
        on left: 19
        on right: 9
    iomodifier_opt (23)
        on left: 22
        on right: 16 17
    $@1 (24)
        on left: 20
        on right: 22
    $@2 (25)
        on left: 21
        on right: 22
    background_opt (26)
        on left: 23 24
        on right: 5


State 0

    0 $accept: . goal $end

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    goal              go to state 4
    commands          go to state 5
    command           go to state 6
    simple_command    go to state 7
    command_and_args  go to state 8
    command_pipe      go to state 9
    command_word      go to state 10


State 1

    7 command: error . NEWLINE

    NEWLINE  shift, and go to state 11


State 2

   19 command_word: WORD .

    $default  reduce using rule 19 (command_word)


State 3

    6 command: NEWLINE .

    $default  reduce using rule 6 (command)


State 4

    0 $accept: goal . $end

    $end  shift, and go to state 12


State 5

    1 goal: commands .
    4 commands: commands . command

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    $end  reduce using rule 1 (goal)

    command           go to state 13
    simple_command    go to state 7
    command_and_args  go to state 14
    command_word      go to state 10


State 6

    2 commands: command .

    $default  reduce using rule 2 (commands)


State 7

    5 command: simple_command . iomodifier_list_opt background_opt NEWLINE

    GREAT  shift, and go to state 15

    $default  reduce using rule 15 (iomodifier_list_opt)

    iomodifier_list_opt  go to state 16
    iomodifier_list      go to state 17
    iomodifier_opt       go to state 18


State 8

    8 simple_command: command_and_args .
   10 command_pipe: command_and_args . PIPE command_pipe
   11             | command_and_args .

    PIPE  shift, and go to state 19

    $end      reduce using rule 11 (command_pipe)
    error     reduce using rule 11 (command_pipe)
    WORD      reduce using rule 11 (command_pipe)
    NEWLINE   reduce using rule 8 (simple_command)
    NEWLINE   [reduce using rule 11 (command_pipe)]
    $default  reduce using rule 8 (simple_command)


State 9

    3 commands: command_pipe .

    $default  reduce using rule 3 (commands)


State 10

    9 command_and_args: command_word . arg_list

    $default  reduce using rule 13 (arg_list)

    arg_list  go to state 20


State 11

    7 command: error NEWLINE .

    $default  reduce using rule 7 (command)


State 12

    0 $accept: goal $end .

    $default  accept


State 13

    4 commands: commands command .

    $default  reduce using rule 4 (commands)


State 14

    8 simple_command: command_and_args .

    $default  reduce using rule 8 (simple_command)


State 15

   22 iomodifier_opt: GREAT . WORD $@1 LESS WORD $@2 GREATGREAT WORD

    WORD  shift, and go to state 21


State 16

    5 command: simple_command iomodifier_list_opt . background_opt NEWLINE

    AMPERSAND  shift, and go to state 22

    $default  reduce using rule 24 (background_opt)

    background_opt  go to state 23


State 17

   14 iomodifier_list_opt: iomodifier_list .

    $default  reduce using rule 14 (iomodifier_list_opt)


State 18

   16 iomodifier_list: iomodifier_opt . iomodifier_list
   17                | iomodifier_opt .

    GREAT  shift, and go to state 15

    $default  reduce using rule 17 (iomodifier_list)

    iomodifier_list  go to state 24
    iomodifier_opt   go to state 18


State 19

   10 command_pipe: command_and_args PIPE . command_pipe

    WORD  shift, and go to state 2

    command_and_args  go to state 25
    command_pipe      go to state 26
    command_word      go to state 10


State 20

    9 command_and_args: command_word arg_list .
   12 arg_list: arg_list . argument

    WORD  shift, and go to state 27

    WORD      [reduce using rule 9 (command_and_args)]
    $default  reduce using rule 9 (command_and_args)

    argument  go to state 28


State 21

   22 iomodifier_opt: GREAT WORD . $@1 LESS WORD $@2 GREATGREAT WORD

    $default  reduce using rule 20 ($@1)

    $@1  go to state 29


State 22

   23 background_opt: AMPERSAND .

    $default  reduce using rule 23 (background_opt)


State 23

    5 command: simple_command iomodifier_list_opt background_opt . NEWLINE

    NEWLINE  shift, and go to state 30


State 24

   16 iomodifier_list: iomodifier_opt iomodifier_list .

    $default  reduce using rule 16 (iomodifier_list)


State 25

   10 command_pipe: command_and_args . PIPE command_pipe
   11             | command_and_args .

    PIPE  shift, and go to state 19

    $default  reduce using rule 11 (command_pipe)


State 26

   10 command_pipe: command_and_args PIPE command_pipe .

    $default  reduce using rule 10 (command_pipe)


State 27

   18 argument: WORD .

    $default  reduce using rule 18 (argument)


State 28

   12 arg_list: arg_list argument .

    $default  reduce using rule 12 (arg_list)


State 29

   22 iomodifier_opt: GREAT WORD $@1 . LESS WORD $@2 GREATGREAT WORD

    LESS  shift, and go to state 31


State 30

    5 command: simple_command iomodifier_list_opt background_opt NEWLINE .

    $default  reduce using rule 5 (command)


State 31

   22 iomodifier_opt: GREAT WORD $@1 LESS . WORD $@2 GREATGREAT WORD

    WORD  shift, and go to state 32


State 32

   22 iomodifier_opt: GREAT WORD $@1 LESS WORD . $@2 GREATGREAT WORD

    $default  reduce using rule 21 ($@2)

    $@2  go to state 33


State 33

   22 iomodifier_opt: GREAT WORD $@1 LESS WORD $@2 . GREATGREAT WORD

    GREATGREAT  shift, and go to state 34


State 34

   22 iomodifier_opt: GREAT WORD $@1 LESS WORD $@2 GREATGREAT . WORD

    WORD  shift, and go to state 35


State 35

   22 iomodifier_opt: GREAT WORD $@1 LESS WORD $@2 GREATGREAT WORD .

    $default  reduce using rule 22 (iomodifier_opt)
